<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Nom de l'appli -->
    <string name="app_name">Secret Places</string>

    <!-- Page principale (Map) -->
    <string name="map">Carte</string>
    <string name="list">Liste</string>
    <string name="refresh">Actualiser</string>
    <string name="title_activity_add_place">Ajouter un lieu</string>

    <!-- Page de creation de lieu -->
    <string name="no_camera">L\'appareil ne dispose pas d\'une caméra, veuillez acheter du materiel récent</string>
    <string name="take_picture">Prendre une photo</string>
    <string name="add">Ajouter</string>
    <string name="cancel">Quitter</string>
    <string name="your_history">Votre histoire</string>
    <string name="gps_disabled">Localisation désactivée</string>
    <string name="turn_on_gps">Afin d\'utiliser cette application veuillez activer le gps du terminal</string>
    <string name="activate">Activer</string>

    <!-- Pop Up -->
    <string name="meter">mètre</string>
    <string name="placeHistoryEmpty">Histoire du lieu : C\'est un mystère.</string>
    <string name="placeHistory">Histoire du lieu :</string>
    <string name="action_settings">settings</string>
    <string name="place_name">Nom du lieu</string>
    <string name="description">Description</string>
    <string name="send">Envoyer</string>
    <string name="popup_add_place_txt">Entrez les détails de votre lieu secret puis partagez le au monde</string>
    <string name="new_place">Nouveau lieu</string>

</resources>
