<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_add_place_txt"
        android:id="@+id/popup_add_place_txt"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/color_app"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/popup_add_place_edttxt_name"
        android:layout_gravity="center_horizontal"
        android:hint="@string/place_name"
        android:singleLine="true"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/popup_add_place_edttxt_description"
        android:layout_gravity="center_horizontal"
        android:hint="@string/description"
        android:minLines="2"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/cancel"
            android:id="@+id/popup_add_place_btn_cancel"
            android:background="@drawable/custom_btn"
            android:layout_marginRight="2dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/send"
            android:id="@+id/popup_add_place_btn_send"
            android:background="@drawable/custom_btn"
            android:layout_marginLeft="2dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </LinearLayout>
</LinearLayout>